[project]
name = "thermadex"
version = "0.0.1"
description = "Thermal comfort indices library"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Telluris Labs", email = "info@tellurislabs.io" }
]
keywords = [ "thermal-comfort", "thermal-indices", "bioclimatic", "heat-stress", "cold-stress", "utci", "pet", 
"heat-index", "apparent-temperature", "perceived-temperature", "python"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
